--- a/public_html/styles/login.css
+++ b/public_html/styles/login.css
@@ -31,16 +31,16 @@
 }
 
  @-webkit-keyframes expand-1 {
-   0% { height: 22px; background-color: #037ad8;}
-   33% { height: 22px; background-color: #037ad8;}
-   34% { height: 15px; background-color: #3fa0ef;}
-   100% { height: 15px; background-color: #3fa0ef;}
+   0% { height: 22px; background-color: white;}
+   33% { height: 22px; background-color: white;}
+   34% { height: 15px; background-color: #d2d2d2;}
+   100% { height: 15px; background-color: #d2d2d2;}
  }
  @keyframes expand-1 {
-   0% { height: 22px; background-color: #037ad8;}
-   33% { height: 22px; background-color: #037ad8;}
-   34% { height: 15px; background-color: #3fa0ef;}
-   100% { height: 15px; background-color: #3fa0ef;}
+   0% { height: 22px; background-color: white;}
+   33% { height: 22px; background-color: white;}
+   34% { height: 15px; background-color: #d2d2d2;}
+   100% { height: 15px; background-color: #d2d2d2;}
  }
 
  .vt-bars-anim-cont .vt-bar-cont .vt-bar-2 {
@@ -49,20 +49,20 @@
  }
 
  @-webkit-keyframes expand-2 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   33% { height: 15px; background-color: #3fa0ef; }
-   34% { height: 22px; background-color: #037ad8; }
-   66% { height: 22px; background-color: #037ad8; }
-   67% { height: 15px; background-color: #3fa0ef; }
-   100% { height: 15px; background-color: #3fa0ef; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   33% { height: 15px; background-color: #d2d2d2; }
+   34% { height: 22px; background-color: white; }
+   66% { height: 22px; background-color: white; }
+   67% { height: 15px; background-color: #d2d2d2; }
+   100% { height: 15px; background-color: #d2d2d2; }
  }
  @keyframes expand-2 {
-   0% { height: 15px; background-color: #3fa0ef;}
-   33% { height: 15px; background-color: #3fa0ef;}
-   34% { height: 22px; background-color: #037ad8; }
-   66% { height: 22px; background-color: #037ad8; }
-   67% { height: 15px; background-color: #3fa0ef; }
-   100% { height: 15px; background-color: #3fa0ef; }
+   0% { height: 15px; background-color: #d2d2d2;}
+   33% { height: 15px; background-color: #d2d2d2;}
+   34% { height: 22px; background-color: white; }
+   66% { height: 22px; background-color: white; }
+   67% { height: 15px; background-color: #d2d2d2; }
+   100% { height: 15px; background-color: #d2d2d2; }
  }
 
  .vt-bars-anim-cont .vt-bar-cont .vt-bar-3 {
@@ -71,17 +71,21 @@
  }
 
  @-webkit-keyframes expand-3 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   66% { height: 15px; background-color: #3fa0ef; }
-   67% { height: 22px; background-color: #037ad8; }
-   100% { height: 22px; background-color: #037ad8; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   66% { height: 15px; background-color: #d2d2d2; }
+   67% { height: 22px; background-color: white; }
+   100% { height: 22px; background-color: white; }
  }
  @keyframes expand-3 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   66% { height: 15px; background-color: #3fa0ef; }
-   67% { height: 22px; background-color: #037ad8; }
-   100% { height: 22px; background-color: #037ad8; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   66% { height: 15px; background-color: #d2d2d2; }
+   67% { height: 22px; background-color: white; }
+   100% { height: 22px; background-color: white; }
  }
+
+body {
+    background-color: #7f7f7f;
+}
 
 .shadow {
     box-shadow: 0px 1px 10px 2px gray;
@@ -101,9 +105,9 @@
     max-width: 350px;
     margin: 0 auto;
     margin-top: 4%;
-    background-color: white;
+    background-color: #656565;
     padding: 30px 30px;
-    box-shadow: 0px 1px 10px 2px grey;
+    box-shadow: 0px 1px 10px 2px #3e3e3e;
 }
 
 .site-logo-cont {
@@ -118,12 +122,12 @@
 
 .site-logo-cont img {
     height: 60px;
-    width: 348px;
+    width: 436px;
 }
 
 .sign-in-header {
     text-align: center;
-    color: #219bd9;
+    color: white;
     font-weight: 500;
 }
 
@@ -157,7 +161,8 @@
     color: #067cd9;
 }
 
-input[type=text],
+input[type=text], 
+input[type=email],
 input[type=password] {
     width: 100%;
     height: 30px;
@@ -165,22 +170,23 @@ input[type=password] {
     padding-left: 15px;
     font-family: Calibri;
     font-size: 1.4em;
-    color: #6f6f6f;
+    color: #bfbfbf;
+    background-color: #656565;
 }
 
 .hr-line-input {
     border: none;
     outline: none;
-    border-bottom: 1px solid #219bda;
+    border-bottom: 2px solid #8c8c8c;
 }
 
 .err-hr-line-input {
     border: none;
     outline: none;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #963030;
 }
 
-.username-input-wrapper > label,
+.email-input-wrapper > label,
 .password-input-wrapper > label {
     position: relative;
     top: 24px;
@@ -197,12 +203,12 @@ label.push-up {
     transition: top 0.2s ease-out, right 0.2s ease-out;
 }
 
-.username-input-wrapper.lb-normal-color > label,
+.email-input-wrapper.lb-normal-color > label,
 .password-input-wrapper.lb-normal-color > label {
-    color: #219bd9;
+    color: white;
 }
 
-#username-input:disabled,
+#email-input:disabled,
 #password-input:disabled {
     background-color: unset;
     color: rgb(136, 136, 136);
@@ -277,22 +283,19 @@ input[type=submit] {
     font-size: 1.1em;
     color: white;
     cursor: default;
-    background: rgb(0, 120, 215);
-    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: rgb(70, 70, 70);
+    background: linear-gradient(120deg, rgb(70, 70, 70), rgb(56, 56, 56));
 }
 
 input[type=submit]:hover {
-    box-shadow: 0px 2px 4px 1px gray;
+    box-shadow: 0px 2px 4px 1px rgb(35, 35, 35);
 }
 
 input[type=submit]:disabled:hover {
     box-shadow: unset!important;
 }
 
-#username-input:disabled,
+#email-input:disabled,
 #password-input:disabled {
     background-color: unset;
     color: rgb(136, 136, 136);
@@ -307,7 +310,7 @@ input[type=submit]:disabled:hover {
 .forgot-pswd-cont > a {
     text-decoration: none;
     font-size: 1.1em;
-    color: #047bd9;
+    color: white;
 }
 
 .forgot-pswd-cont > a:hover {
@@ -317,6 +320,7 @@ input[type=submit]:disabled:hover {
 .create-account-cont {
     text-align: center;
     font-size: 1.1em;
+    color: white;
 }
 
 .create-account-cont > p {
@@ -324,7 +328,7 @@ input[type=submit]:disabled:hover {
 }
 
 .create-account-cont a {
-    color: #047bd9;
+    color: white;
 }
 
 #err-msg-box {
@@ -334,8 +338,8 @@ input[type=submit]:disabled:hover {
     margin-bottom: -61px;
     min-height: 45px;
     border-radius: 6px;
-    background-color: #ff561c;
-    box-shadow: 1px 3px 6px 2px grey;
+    background-color: #dc5628;
+    box-shadow: 1px 3px 4px 1px #4c4c4c;
     z-index: 200;
 }
 
@@ -346,7 +350,7 @@ input[type=submit]:disabled:hover {
     width: 15px;
     height: 15px;
     transform: rotate(45deg);
-    background-color: #ff561c;
+    background-color: #dc5628;
 }
 
 #err-msg-box .close-btn {
@@ -382,12 +386,17 @@ input[type=submit]:disabled:hover {
 .login-footer {
     text-align: center;
     font-family: Calibri;
-    font-size: 1.2em;
+    font-size: 1.1em;
     padding: 20px 0px;
     margin-top: 20px;
+    color: white;
 }
 
 @media only screen and (max-width: 500px) {
+    body {
+        background-color: #656565;
+    }
+
     .login-page {
         width: unset;
         max-width: unset;
