--- a/public_html/styles/reset_password.css
+++ b/public_html/styles/reset_password.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #5a5a5a;
+}
+
 .hide-elem {
     visibility: hidden;
 }
@@ -36,16 +40,16 @@
 }
 
  @-webkit-keyframes expand-1 {
-   0% { height: 22px; background-color: #037ad8;}
-   33% { height: 22px; background-color: #037ad8;}
-   34% { height: 15px; background-color: #3fa0ef;}
-   100% { height: 15px; background-color: #3fa0ef;}
+   0% { height: 22px; background-color: white;}
+   33% { height: 22px; background-color: white;}
+   34% { height: 15px; background-color: #d2d2d2;}
+   100% { height: 15px; background-color: #d2d2d2;}
  }
  @keyframes expand-1 {
-   0% { height: 22px; background-color: #037ad8;}
-   33% { height: 22px; background-color: #037ad8;}
-   34% { height: 15px; background-color: #3fa0ef;}
-   100% { height: 15px; background-color: #3fa0ef;}
+   0% { height: 22px; background-color: white;}
+   33% { height: 22px; background-color: white;}
+   34% { height: 15px; background-color: #d2d2d2;}
+   100% { height: 15px; background-color: #d2d2d2;}
  }
 
  .vt-bars-anim-cont .vt-bar-cont .vt-bar-2 {
@@ -54,20 +58,20 @@
  }
 
  @-webkit-keyframes expand-2 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   33% { height: 15px; background-color: #3fa0ef; }
-   34% { height: 22px; background-color: #037ad8; }
-   66% { height: 22px; background-color: #037ad8; }
-   67% { height: 15px; background-color: #3fa0ef; }
-   100% { height: 15px; background-color: #3fa0ef; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   33% { height: 15px; background-color: #d2d2d2; }
+   34% { height: 22px; background-color: white; }
+   66% { height: 22px; background-color: white; }
+   67% { height: 15px; background-color: #d2d2d2; }
+   100% { height: 15px; background-color: #d2d2d2; }
  }
  @keyframes expand-2 {
-   0% { height: 15px; background-color: #3fa0ef;}
-   33% { height: 15px; background-color: #3fa0ef;}
-   34% { height: 22px; background-color: #037ad8; }
-   66% { height: 22px; background-color: #037ad8; }
-   67% { height: 15px; background-color: #3fa0ef; }
-   100% { height: 15px; background-color: #3fa0ef; }
+   0% { height: 15px; background-color: #d2d2d2;}
+   33% { height: 15px; background-color: #d2d2d2;}
+   34% { height: 22px; background-color: white; }
+   66% { height: 22px; background-color: white; }
+   67% { height: 15px; background-color: #d2d2d2; }
+   100% { height: 15px; background-color: #d2d2d2; }
  }
 
  .vt-bars-anim-cont .vt-bar-cont .vt-bar-3 {
@@ -76,16 +80,16 @@
  }
 
  @-webkit-keyframes expand-3 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   66% { height: 15px; background-color: #3fa0ef; }
-   67% { height: 22px; background-color: #037ad8; }
-   100% { height: 22px; background-color: #037ad8; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   66% { height: 15px; background-color: #d2d2d2; }
+   67% { height: 22px; background-color: white; }
+   100% { height: 22px; background-color: white; }
  }
  @keyframes expand-3 {
-   0% { height: 15px; background-color: #3fa0ef; }
-   66% { height: 15px; background-color: #3fa0ef; }
-   67% { height: 22px; background-color: #037ad8; }
-   100% { height: 22px; background-color: #037ad8; }
+   0% { height: 15px; background-color: #d2d2d2; }
+   66% { height: 15px; background-color: #d2d2d2; }
+   67% { height: 22px; background-color: white; }
+   100% { height: 22px; background-color: white; }
  }
 
 .page-cont-max-width {
@@ -112,7 +116,7 @@
 
 .site-logo-cont img {
     height: 60px;
-    width: 348px;
+    width: 436px;
 }
 
 .page-top-menu-cont .menu-links-cont {
@@ -135,16 +139,16 @@
     text-decoration: none;
     font-size: 0.95em;
     font-weight: 500;
-    color: #219bd9;
+    color: #c3c3c3;;
 }
 
 .page-top-menu-cont .menu-links-cont > ul > li > a:hover {
-    color: #6dbbe2;
+    color: white;
 }
 
 .recover-account-header {
     text-align: center;
-    color: #219bd9;
+    color: white;
     font-weight: normal;
     margin-bottom: 50px;
 }
@@ -162,8 +166,8 @@
     margin-bottom: -25px;
     min-height: 45px;
     border-radius: 6px;
-    background-color: #ff561c;
-    box-shadow: 1px 3px 6px 2px grey;
+    background-color: #dc5628;
+    box-shadow: 1px 3px 4px 1px #4c4c4c;
     z-index: 200;
 }
 
@@ -174,7 +178,7 @@
     width: 15px;
     height: 15px;
     transform: rotate(45deg);
-    background-color: #ff561c;
+    background-color: #dc5628;
 }
 
 #err-msg-box .close-btn {
@@ -221,19 +225,19 @@ input[type=password] {
 input[type=text], 
 input[type=password] {
     background-color: unset;
-    color: rgb(136, 136, 136);
+    color: rgb(187, 187, 187);
 }
 
 .hr-line-input {
     border: none;
     outline: none;
-    border-bottom: 1px solid #219bda;
+    border-bottom: 2px solid #a5a5a5;
 }
 
 .err-hr-line-input {
     border: none;
     outline: none;
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #963030;
 }
 
 .email-input-cont {
@@ -244,7 +248,6 @@ input[type=password] {
 .cpswd-submit-btn-cont, 
 .confirm-password-input-cont {
     margin-bottom: 40px;
-    overflow: hidden;
 }
 
 .cpswd-submit-btn-cont {
@@ -264,7 +267,7 @@ input[type=password] {
     padding-left: 8px;
     font-family: Calibri;
     font-size: 1.3em;
-    color: #219bd9;
+    color: white;
     transition: top 0.2s ease-out, right 0.2s ease-out;
 }
 
@@ -296,7 +299,7 @@ input[type=password] {
 }
 
 #settings-show-passwd-cont.show > i {
-    color: #3197ea;
+    color: white;
 }
 
 #password-match-icon-cont {
@@ -309,7 +312,7 @@ input[type=password] {
     font-size: 1.2em;
     padding-top: 4px;
     cursor: default;
-    color: #3197ea;
+    color: white;
 }
 
 .passwd-strength-indicator-cont {
@@ -373,19 +376,16 @@ input[type=submit] {
     outline: none;
     padding: 10px 0;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 8px;
     font-size: 1.1em;
     color: white;
     cursor: default;
-    background: rgb(0, 120, 215);
-    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
-    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: rgb(70, 70, 70);
+    background: linear-gradient(120deg, rgb(70, 70, 70), rgb(56, 56, 56));
 }
 
 input[type=submit]:hover {
-    box-shadow: 0px 2px 4px 1px gray;
+    box-shadow: 0px 2px 4px 1px rgb(35, 35, 35);
 }
 
 input[type=submit]:disabled:hover {
@@ -405,6 +405,7 @@ input[type=submit]:disabled:hover {
     font-family: Calibri;
     font-size: 1.1em;
     padding: 15px 0px;
+    color: white;
 }
 
 @media only screen and (max-width: 800px) {
