--- a/public_html/styles/homepage.css
+++ b/public_html/styles/homepage.css
@@ -618,6 +618,70 @@
     line-height: 32px;
 }
 
+#pop-up-message-bg-cover {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 500;
+    background-color: rgba(0, 0, 0, 0.65);
+}
+
+#contact-us-pop-up-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -180px;
+    margin-left: -150px;
+    width: 300px;
+    min-height: 200px;
+    border-radius: 8px;
+    border: 1px solid #3a3a3a;
+    box-shadow: 0px 2px 4px 2px #171717;
+    background-color: #424242;
+    z-index: 550;
+}
+
+#contact-us-pop-up-message .message-cont {
+    padding: 0px 15px 20px 15px;
+}
+
+#contact-us-pop-up-message .message-title {
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: normal;
+    font-weight: 500;
+    color: white;
+}
+
+#contact-us-pop-up-message .message-body {
+    text-align: center;
+    line-height: 27px;
+    font-size: 1.1em;
+    color: white;
+}
+
+#contact-us-pop-up-message .button-cont {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#contact-us-pop-up-message .ok-button {
+    height: 40px;
+    width: 120px;
+    border: 1px solid white;
+    outline: none;
+    border-radius: 6px;
+    font-size: 1.2em;
+    color: white;
+    background: linear-gradient(100deg, #b3b3b3, #4c4c4c);
+    cursor: pointer;
+}
+
+#contact-us-pop-up-message .ok-button:hover {
+    background: linear-gradient(100deg, #a5a5a5, #404040);
+}
+
 .contact-us-section-cont {
     padding-top: 50px;
     padding-bottom: 150px;
@@ -725,10 +789,9 @@
     font-size: 1.1em;
 }
 
-.contact-us-section-cont .form-input-cont .input-cont > input:focus,
-.contact-us-section-cont .textarea-input:focus {
-    border: 1px solid #e07f46;
-    box-shadow: 0px 0px 4px 1px rgb(216, 80, 0, 0.6);
+.contact-us-section-cont .form-input-cont .input-cont > input:disabled,
+.contact-us-section-cont .textarea-input:disabled {
+    background-color: rgb(228, 228, 228);
 }
 
 
@@ -1429,8 +1492,39 @@
 }
 
 .page-footer-section .footer-column .newsletter-sub-cont {
+    position: relative;
     margin-top: 10px;
     margin-bottom: 30px;
+}
+
+.page-footer-section .footer-column .newsletter-sub-cont .subscription-message {
+    position: absolute;
+    top: -50px;
+    cursor: default;
+}
+
+.page-footer-section .footer-column .newsletter-sub-cont .subscription-message .message {
+    max-width: 250px;
+    min-width: 150px;
+    padding: 10px 10px;
+    border-radius: 4px;
+    background-color: white;
+    font-size: 0.9em;
+    font-weight: 500;
+    color: #545454;
+    box-shadow: 0px 2px 3px 0px black;
+}
+
+.page-footer-section .footer-column .newsletter-sub-cont .subscription-message .pointer {
+    position: absolute;
+    bottom: -5px;
+    left: 20px;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg);
+    background-color: white;
+    border-right: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
 }
 
 .page-footer-section .footer-column .newsletter-sub-cont .email-input-cont {
@@ -1453,6 +1547,10 @@
     padding: 0px 10px;
     box-sizing: border-box;
     font-size: 1.0em;
+}
+
+.page-footer-section .footer-column .newsletter-sub-cont .email-input-cont > input:disabled {
+    background-color: lightgray;
 }
 
 .page-footer-section .footer-column .newsletter-sub-cont .sub-button-cont > button {
